5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/1330/executions/1795_1593.log
== TEST (2019-05-30 17:05:16) 
-- CODE:
from numpy import *
notas = array(eval(input()))
peso = 1
i = 0
calculo = 0
while(i<size(notas)):
	calculo = (notas[i]*peso) + calculo
	peso = peso + 1
	i = i + 1
print(calculo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:06:16) 
-- CODE:
from numpy import *
notas = array(eval(input()))
peso = 1
i = 0
calculo = 0
while(i<size(notas)):
	calculo = (notas[i]*peso) + calculo
	peso = peso + 1
	i = i + 1
media = calculo/i
print(media)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:07:05) 
-- CODE:
from numpy import *
notas = array(eval(input()))
peso = 1
i = 0
calculo = 0
while(i<size(notas)):
	calculo = (notas[i]*peso) + calculo
	peso = peso + 1
	i = i + 1
media = calculo/size
print(calculo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:07:35) 
-- CODE:
from numpy import *
notas = array(eval(input()))
peso = 1
i = 0
calculo = 0
while(i<size(notas)):
	calculo = (notas[i]*peso) + calculo
	peso = peso + 1
	i = i + 1
#media = calculo/size
print(calculo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:08:14) 
-- CODE:
from numpy import *
notas = array(eval(input()))
peso = 1
i = 0
calculo = 0
while(i<size(notas)):
	calculo = (notas[i]*peso) + calculo
	peso = peso + 1
	i = i + 1
media = calculo/(size(notas)) + 1
print(calculo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:08:23) 
-- CODE:
from numpy import *
notas = array(eval(input()))
peso = 1
i = 0
calculo = 0
while(i<size(notas)):
	calculo = (notas[i]*peso) + calculo
	peso = peso + 1
	i = i + 1
media = calculo/(size(notas)) + 1
print(media)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:08:41) 
-- CODE:
from numpy import *
notas = array(eval(input()))
peso = 1
i = 0
calculo = 0
while(i<size(notas)):
	calculo = (notas[i]*peso) + calculo
	peso = peso + 1
	i = i + 1
media = calculo/(size(notas)) + 1
print(calculo/10)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:08:46) 
-- CODE:
from numpy import *
notas = array(eval(input()))
peso = 1
i = 0
calculo = 0
while(i<size(notas)):
	calculo = (notas[i]*peso) + calculo
	peso = peso + 1
	i = i + 1
media = calculo/(size(notas)) + 1
print(calculo/10)
-- EXECUTION TIME:
0.516205
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
4.598000000000001
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
1.05
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:
0.76
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:09:41) 
-- CODE:
from numpy import *
notas = array(eval(input()))
peso = 1
i = 0
calculo = 0
while(i<size(notas)):
	calculo = (notas[i]*peso) + calculo
	peso = peso + 1
	i = i + 1
#media = calculo/(size(notas)) + 1
print(calculo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:09:58) 
-- CODE:
from numpy import *
notas = array(eval(input()))
peso = 1
i = 0
calculo = 0
while(i<size(notas)):
	calculo = (notas[i]*peso) + calculo
	peso = peso + 1
	i = i + 1
#media = calculo/(size(notas)) + 1
print(round(calculo,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:10:12) 
-- CODE:
from numpy import *
notas = array(eval(input()))
peso = 1
i = 0
calculo = 0
while(i<size(notas)):
	calculo = (notas[i]*peso) + calculo
	peso = peso + 1
	i = i + 1
#media = calculo/(size(notas)) + 1
print(round(calculo,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:11:07) 
-- CODE:
from numpy import *
notas = array(eval(input()))
peso = 1
i = 0
calculo = 0
while(i<size(notas)):
	calculo = (notas[i]*peso) + calculo
	peso = peso + 1
	i = i + 1
#media = calculo/(size(notas)) + 1
print(round(calculo/peso,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:11:15) 
-- CODE:
from numpy import *
notas = array(eval(input()))
peso = 1
i = 0
calculo = 0
while(i<size(notas)):
	calculo = (notas[i]*peso) + calculo
	peso = peso + 1
	i = i + 1
#media = calculo/(size(notas)) + 1
print(round(calculo/peso,2))
-- EXECUTION TIME:
0.458895
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
9.2
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
2.1
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:
2.53
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:13:25) 
-- CODE:
from numpy import *
notas = array(eval(input()))
peso = 1
i = 0
calculo = 0
deno = 1
while(i<size(notas)):
	calculo = (notas[i]*peso) + calculo
	peso = peso + 1
	i = i + 1
	den = den + peso
#media = calculo/(size(notas)) + 1
print(round(calculo/den,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:13:36) 
-- CODE:
from numpy import *
notas = array(eval(input()))
peso = 1
i = 0
calculo = 0
deno = 1
while(i<size(notas)):
	calculo = (notas[i]*peso) + calculo
	peso = peso + 1
	i = i + 1
	den = den + peso
#media = calculo/(size(notas)) + 1
print(round(calculo/deno,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:14:34) 
-- CODE:
from numpy import *
notas = array(eval(input()))
peso = 1
i = 0
calculo = 0
deno = 1
while(i<size(notas)):
	calculo = (notas[i]*peso) + calculo
	deno = deno + peso
	peso = peso + 1
	i = i + 1
	#deno = deno + peso
#media = calculo/(size(notas)) + 1
print(round(calculo/deno,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:14:57) 
-- CODE:
from numpy import *
notas = array(eval(input()))
peso = 1
i = 0
calculo = 0
deno = 1
while(i<size(notas)):
	deno = deno + peso
	calculo = (notas[i]*peso) + calculo
	#deno = deno + peso
	peso = peso + 1
	i = i + 1
	#deno = deno + peso
#media = calculo/(size(notas)) + 1
print(round(calculo/deno,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:15:08) 
-- CODE:
from numpy import *
notas = array(eval(input()))
peso = 1
i = 0
calculo = 0
deno = 1
while(i<size(notas)):
	deno = deno + peso
	calculo = (notas[i]*peso) + calculo
	#deno = deno + peso
	peso = peso + 1
	i = i + 1
	#deno = deno + peso
#media = calculo/(size(notas)) + 1
print(round(calculo/deno,2))
-- EXECUTION TIME:
0.3561
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
4.18
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
0.95
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:
1.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:15:26) 
-- CODE:
from numpy import *
notas = array(eval(input()))
peso = 1
i = 0
calculo = 0
while(i<size(notas)):
	calculo = (notas[i]*peso) + calculo
	peso = peso + 1
	i = i + 1
#media = calculo/(size(notas)) + 1
print(round(calculo,2))
-- EXECUTION TIME:
0.397097
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
45.98
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
10.5
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:
7.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:15:32) 
-- CODE:
from numpy import *
notas = array(eval(input()))
peso = 1
i = 0
calculo = 0
while(i<size(notas)):
	calculo = (notas[i]*peso) + calculo
	peso = peso + 1
	i = i + 1
#media = calculo/(size(notas)) + 1
print(round(calculo,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:15:47) 
-- CODE:
from numpy import *
notas = array(eval(input()))
peso = 1
i = 0
calculo = 0
while(i<size(notas)):
	calculo = (notas[i]*peso) + calculo
	peso = peso + 1
	i = i + 1
#media = calculo/(size(notas)) + 1
print(round(calculo,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:24:56) 
-- CODE:
from numpy import *
notas = array(eval(input()))
peso = 1
i = 0
calculo = 0
denominador = 0
while(i<size(notas)):
	calculo = (notas[i]*peso) + calculo
	peso = peso + 1
	i = i + 1
	denominador = denominador + 
#media = calculo/(size(notas)) + 1
print(round(calculo,2))
-- EXECUTION TIME:
0.157064
-- ERROR:
  File "/home/codebench/codes/1795/1593/main.py", line 11
    denominador = denominador + 
                               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:25:11) 
-- CODE:
from numpy import *
notas = array(eval(input()))
peso = 1
i = 0
calculo = 0
#denominador = 0
while(i<size(notas)):
	calculo = (notas[i]*peso) + calculo
	peso = peso + 1
	i = i + 1
	#denominador = denominador + 
#media = calculo/(size(notas)) + 1
print(round(calculo,2))
-- EXECUTION TIME:
0.577768
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
45.98
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
10.5
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:
7.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:25:14) 
-- CODE:
from numpy import *
notas = array(eval(input()))
peso = 1
i = 0
calculo = 0
#denominador = 0
while(i<size(notas)):
	calculo = (notas[i]*peso) + calculo
	peso = peso + 1
	i = i + 1
	#denominador = denominador + 
#media = calculo/(size(notas)) + 1
print(round(calculo,2))
-- EXECUTION TIME:
0.471201
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
45.98
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
45.98
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:
10.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:25:15) 
-- CODE:
from numpy import *
notas = array(eval(input()))
peso = 1
i = 0
calculo = 0
#denominador = 0
while(i<size(notas)):
	calculo = (notas[i]*peso) + calculo
	peso = peso + 1
	i = i + 1
	#denominador = denominador + 
#media = calculo/(size(notas)) + 1
print(round(calculo,2))
-- EXECUTION TIME:
0.651451
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
45.98
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
10.5
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:
7.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:25:15) 
-- CODE:
from numpy import *
notas = array(eval(input()))
peso = 1
i = 0
calculo = 0
#denominador = 0
while(i<size(notas)):
	calculo = (notas[i]*peso) + calculo
	peso = peso + 1
	i = i + 1
	#denominador = denominador + 
#media = calculo/(size(notas)) + 1
print(round(calculo,2))
-- EXECUTION TIME:
1.01061
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
45.98
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
10.5
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:
7.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:25:28) 
-- CODE:
from numpy import *
notas = array(range(input()))
peso = 1
i = 0
calculo = 0
#denominador = 0
while(i<size(notas)):
	calculo = (notas[i]*peso) + calculo
	peso = peso + 1
	i = i + 1
	#denominador = denominador + 
#media = calculo/(size(notas)) + 1
print(round(calculo,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:28:18) 
-- CODE:
from numpy import *
notas = array(eval(input()))
peso = 1
i = 0
calculo = 0
den = 1
while(i<size(notas)):
	calculo = (notas[i]*peso) + calculo
	peso = peso + 1
	i = i + 1
	den = den + peso
#media = calculo/(size(notas)) + 1
print(round(calculo/den,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:29:14) 
-- CODE:
from numpy import *
notas = array(eval(input()))
peso = 1
i = 0
calculo = 0
den = 0
while(i<size(notas)):
	calculo = (notas[i]*peso) + calculo
	peso = peso + 1
	i = i + 1
	den = den + peso
#media = calculo/(size(notas)) + 1
print(round(calculo/den,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:30:39) 
-- CODE:
from numpy import *
notas = array(eval(input()))
peso = 1
i = 0
calculo = 0
while(i<size(notas)):
	calculo = (notas[i]*peso) + calculo
	peso = peso + 1
	i = i + 1
	den = den + peso

print(round(calculo,2))
-- EXECUTION TIME:
0.547431
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1593/main.py", line 10, in <module>
    den = den + peso
NameError: name 'den' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:30:47) 
-- CODE:
from numpy import *
notas = array(eval(input()))
peso = 1
i = 0
calculo = 0
while(i<size(notas)):
	calculo = (notas[i]*peso) + calculo
	peso = peso + 1
	i = i + 1

print(round(calculo,2))
-- EXECUTION TIME:
0.492259
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
45.98
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
10.5
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:
7.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:31:38) 
-- CODE:
from numpy import *
notas = array(eval(input()))
peso = 1
i = 0
calculo = 0
soma = 0
while(i<size(notas)):
	calculo = (notas[i]*peso) + calculo
	peso = peso + 1
	soma = soma + peso
	i = i + 1

print(round(calculo/soma,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:32:31) 
-- CODE:
from numpy import *
notas = array(eval(input()))
peso = 1
i = 0
calculo = 0
soma = 0
while(i<size(notas)):
	calculo = (notas[i]*peso) + calculo
	peso = peso + 1
	soma = soma + peso
	i = i + 1

print(round(calculo/soma,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:33:31) 
-- CODE:
from numpy import *
notas = array(eval(input()))
peso = 1
i = 0
calculo = 0
soma = 0
while(i<size(notas)):
	calculo = (notas[i]*peso) + calculo
	peso = peso + 1
	soma = soma + peso
	i = i + 1

print(round(calculo/soma,2))
-- EXECUTION TIME:
0.594685
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
3.28
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
0.75
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:
1.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:36:05) 
-- CODE:
from numpy import *
notas = array(eval(input()))
peso = 1
i = 0
calculo = 0
soma = 0
while(i<size(notas)):
	calculo = (notas[i]*peso) + calculo
	soma = soma + peso
	peso = peso + 1
	i = i + 1

print(round(calculo/soma,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:36:16) 
-- CODE:
from numpy import *
notas = array(eval(input()))
peso = 1
i = 0
calculo = 0
soma = 0
while(i<size(notas)):
	calculo = (notas[i]*peso) + calculo
	soma = soma + peso
	peso = peso + 1
	i = i + 1

print(round(calculo/soma,2))
-- EXECUTION TIME:
0.478437
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
4.6
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
1.05
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:
2.53
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
